[package]
name = "spectrometer"
version = "0.0.1"
authors = ["Gabriele Bianchet-David <gbianchetdavid@ebsco.com>"]
edition = "2018"
description = "Crate for getting machine details"
license = "MIT"

[dependencies]
winapi = {version = "0.3.7", features = ["processthreadsapi", "sysinfoapi", "impl-debug", "fileapi", "winbase", "lmcons", "std"]}